--- a/me.yaml
+++ b/me.yaml
@@ -26,8 +26,11 @@ Experience:
 - Role:     Chief Technology Officer 
   Entity:   Bankable
   Started:  November 2024 
+  Stopped:  June 2025
   Location: Remote, Spain
   Details:
+  - I drive the strategic technology vision and innovation roadmap for Bankable's embedded finance platform, overseeing all aspects of technology leadership from product development to enterprise architecture. I also lead cross-functional technology initiatives directly impacting business growth, working closely with executive leadership to align technology with market opportunities.
+  - My responsibilities encompass defining and executing the company's technology strategy, including emerging technologies, platform scalability, and digital transformation initiatives. I oversee the entire technology organization (FE, BE, Platform, IT), fostering an innovation culture while maintaining operational excellence in security, compliance, and system reliability.
 
 - Role:     VP of Engineering
   Entity:   Bankable
@@ -43,6 +46,7 @@ Experience:
 - Role:     Engineering Director
   Entity:   AREX Markets
   Started:  April 2022
+  Stopped:  June 2023
   Location: Remote, Spain
   Details:
   - (Acquired by Bankable)
